<resources>
    <string name="app_name">complex-template</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="order">订单</string>
    <string name="car">购物车</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="JZ">晋中学院</string>
    <string name="login">登录</string>
    <string name="account">账户</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="does_not_register">还未注册？</string>
    <string name="register">注册</string>
    <string name="pwd">密码</string>
    <string name="cbq">cbq</string>
    <string name="cb">cb</string>
    <string name="left">种类</string>
    <string name="element">元素</string>
    <string name="picture">picture</string>
    <string name="title">标题</string>
    <string name="description">描述</string>
    <string name="money">money</string>
    <string name="save_pwd">记住密码</string>
    <string name="product_details">商品详情</string>
    <string name="i_am_cbq_1">I am cbq-1</string>
    <string name="buy_car">加入到购物车</string>
    <string name="total">合计</string>
    <string name="buy">结算</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="num">10</string>
</resources>