<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:src="@drawable/avatar"
                android:scaleType="centerCrop"
                android:layout_width="90dp"
                android:layout_height="90dp" tools:ignore="ContentDescription"/>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:maxLines="2"
                    android:textColor="#333"
                    android:text="@string/cbq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                <ImageView
                        android:src="@drawable/baseline_currency_yen_24"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" tools:ignore="ContentDescription"/>
                <TextView
                        android:text="@string/money"
                        android:textColor="@color/my_light_primary"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:background="#c9c9c9"
                        android:gravity="center"
                        android:text="@string/sub"
                        android:textColor="@color/white"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/num"
                        android:layout_marginStart="10dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:background="@color/my_light_primary"
                        android:gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/white"
                        android:layout_width="20dp"
                        android:layout_height="20dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>