<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/right_list_item_iv_img"
                android:src="@drawable/avatar"
                android:scaleType="centerCrop"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/picture"/>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/right_list_item_tx_title"
                    android:layout_width="wrap_content"
                    android:text="@string/title"
                    android:singleLine="true"
                    android:textColor="#333"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/right_list_item_tx_description"
                    android:layout_width="match_parent"
                    android:text="@string/description"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageView
                        android:src="@drawable/baseline_currency_yen_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="4dp"
                        android:contentDescription="@string/money"/>

                <TextView
                        android:id="@+id/right_list_item_tx_price"
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:text="100"
                        android:textStyle="bold"
                        android:textColor="@color/my_light_primary"
                        android:layout_height="wrap_content" tools:ignore="HardcodedText"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>