<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context=".fragment.CarFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_above="@id/car_fragment_bottom"
            android:orientation="vertical"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/car_fragment_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/car"
                app:titleTextColor="@color/white"
                android:background="@color/my_light_primary"/>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/car_fragment_recyclerView"
                android:layout_width="match_parent"
                tools:listitem="@layout/car_list_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/car_fragment_bottom"
            android:gravity="right"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="center_vertical"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/total"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content">
                    <ImageView
                            android:layout_marginBottom="4dp"
                            android:src="@drawable/baseline_currency_yen_24"
                            android:layout_gravity="bottom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" tools:ignore="ContentDescription"/>
                    <TextView
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/my_light_primary"
                            android:text="@string/money"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <Button
                        android:id="@+id/car_fragment_buy"
                        android:layout_marginLeft="10dp"
                        android:text="@string/buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>